force-app/main/default/objects/IDR_Letter_Approval_Details__c/IDR_Letter_Approval_Details__c.object-meta.xml
<CustomObject>
    <label>Letter Approval Detail</label>
    <nameField>
        <label>Letter Approval Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Approval Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>