force-app/main/default/objects/IDR_Letter_Approval_Details__c/fields/IDR_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>