force-app/main/default/objects/IDR_Letter_Approval_Details__c/fields/IDR_Letter_Approval__c.field-meta.xml
<CustomField>
    <fullName>IDR_Letter_Approval__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <label>Letter Approval</label>
    <referenceTo>IDR_Letter_Approval__c</referenceTo>
    <relationshipLabel>Letter Approval Details</relationshipLabel>
    <relationshipName>Letter_Approval_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>