force-app/main/default/objects/IDR_Letter_Approval_Details__c/fields/IDR_Value__c.field-meta.xml
<CustomField>
    <fullName>IDR_Value__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information</complianceGroup>
    <label>Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>