force-app/main/default/objects/IDR_Letter_Approval_Details__c/validationRules/VR01_Prevent_updates_after_send.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Prevent_updates_after_send</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    OR(
    ISPICKVAL(IDR_Letter_Approval__r.IDR_Status__c , &quot;Approved&quot;) ,
    ISPICKVAL(IDR_Letter_Approval__r.IDR_Status__c , &quot;Sent&quot;))
)</errorConditionFormula>
    <errorMessage>You cannot edit the letter detail after the letter has been Approved/Sent</errorMessage>
</ValidationRule>